<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F3E8">

    <!-- Logo Texto -->
    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:background="#CDDC39"
        android:padding="8dp"
        android:text="@string/tecnology_store"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <!-- Título "Register" -->
    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogo" />

    <!-- Campo Usuario -->
    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle" />

    <!-- Botón Sign Up -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="348dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="#2C2C2C"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsuario" />

    <!-- Título Politicas -->
    <TextView
        android:id="@+id/tvPoliticas"
        android:layout_width="339dp"
        android:layout_height="95dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/by_signing_up_you_agree_to_photo_s_terms_of_service_and_polivacy"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>