<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F3E8"
    tools:context=".RegisterActivity">

    <!-- Logo Texto -->
    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="#CDDC39"
        android:padding="8dp"
        android:text="@string/tecnology_store"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título "Register" -->
    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogo" />

    <!-- Campo Email Registro -->
    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/ochoajairo73_gmail_com"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle" />

    <!-- Campo Contraseña Registro -->
    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/key"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailRegister"
        tools:ignore="NotSibling" />

    <!-- Botón Register -->
    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="348dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="#2C2C2C"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>